plugins/editorconfig/testData/org/editorconfig/language/highlighting/error/suspiciousLineBreak/.editorconfig
[*]
<error>charset
=utf-8</error>
<error>charset=utf-8
,




utf-9</error>
<error>charset =
utf-8</error>
charset = utf-8
